After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 609091 - Totem displaying stream playlist metadata incorrectly
Totem displaying stream playlist metadata incorrectly
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
: 628054 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-02-05 14:21 UTC by Alexander “weej” Jones
Modified: 2010-08-26 18:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
totem screenshot (124.92 KB, image/png)
2010-08-22 12:55 UTC, Rahul
Details

Description Alexander “weej” Jones 2010-02-05 14:21:18 UTC
Example M3U:

#EXTM3U
#EXTINF:-1,Music Tech Sessions (Friday 22 January 2010 20:00 – 00:00)
http://www.icradio.com/media-icrfs2/226313.mp3

Totem is showing this as: "00 - 00:00)" in both the window title and the playlist. I guess it is trying (and failing) to extract an Artist - Title pair from the M3U item title.
Comment 1 Rahul 2010-08-22 12:53:29 UTC
I am using version 2.30.2,
able to play file but title window showing some temporary file number..

check screen shot.
Comment 2 Rahul 2010-08-22 12:55:01 UTC
Created attachment 168497 [details]
totem screenshot
Comment 3 Bastien Nocera 2010-08-23 09:49:19 UTC
Rahul, I'm not sure what your problem is, but it has nothing to do with the original bug report.

Alex, bug fixed:
commit a0824aa8e003b62b8976d2cb683c0cae09d2d6a2
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Aug 23 10:45:53 2010 +0100

    Don't use ":" as a separator in M3U playlists
    
    Fixes parsing of titles with ":" in their titles.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=609091
Comment 4 Rahul 2010-08-23 09:59:42 UTC
Bastien,
Yesterday I had look at this bug and tried to play same file mentioned in bug.
but I could not see "00 - 00:00)" as mentioned earlier.
it showed 226313... in window title and 226313.mp3 in playlist area.

so was just asking it was same or not ? 
was this issue something else ?

- Rahul
Comment 5 Bastien Nocera 2010-08-23 10:07:42 UTC
(In reply to comment #4)
> Bastien,
> Yesterday I had look at this bug and tried to play same file mentioned in bug.
> but I could not see "00 - 00:00)" as mentioned earlier.
> it showed 226313... in window title and 226313.mp3 in playlist area.
> 
> so was just asking it was same or not ? 
> was this issue something else ?

That's another part of the problem which already has its own bug.
Comment 6 Bastien Nocera 2010-08-26 18:36:34 UTC
*** Bug 628054 has been marked as a duplicate of this bug. ***