Don't use ":" as a separator in M3U playlists

Fixes parsing of titles with ":" in their titles.

https://bugzilla.gnome.org/show_bug.cgi?id=609091