plparse/tests/parser.c
@@ -431,6 +431,18 @@ test_lastfm_parsing (void)
 }
 
 static void
+test_m3u_separator (void)
+{
+	char *uri;
+
+	g_test_bug ("609091");
+
+	uri = get_relative_uri (TEST_SRCDIR "separator.m3u");
+	g_assert_cmpstr (parser_test_get_entry_field (uri, TOTEM_PL_PARSER_FIELD_TITLE), ==, "Music Tech Sessions (Friday 22 January 2010 20:00 - 00:00)");
+	g_free (uri);
+}
+
+static void
 test_parsing_xspf_genre (void)
 {
 	char *uri;
@@ -765,6 +777,7 @@ main (int argc, char *argv[])
 		g_test_add_func ("/parser/parsing/xspf_genre", test_parsing_xspf_genre);
 		g_test_add_func ("/parser/parsing/itms_link", test_itms_parsing);
 		g_test_add_func ("/parser/parsing/lastfm-attributes", test_lastfm_parsing);
+		g_test_add_func ("/parser/parsing/m3u_separator", test_m3u_separator);
 
 		return g_test_run ();
 	}
